add audi clip
